--- a/app/templates/components/head.html
+++ b/app/templates/components/head.html
@@ -3,7 +3,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <meta property="og:ttl" content="600" />
 <meta property="og:title" content="{{ title }}">
-<meta property="og:site_name" content="mais gamer" />
+<meta property="og:site_name" content="Mais Gamer" />
 <meta property="twitter:site" content="@maisgamernews" />
 <meta property="twitter:card" content="summary" />
 <meta property="twitter:title" content="{{ title }}">
