--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -3,11 +3,11 @@
 
 <head>
   {% include 'components/head.html' %}
-  <meta name="description" content="Gaming news, eSports, Trailers e Streamers." />
-  <meta property="og:description" content="Gaming news, eSports, Trailers e Streamers.">
-  <meta property="og:image" content="{{ url_for('static', filename='favicon_2.png') }}">
-  <meta property="twitter:description" content="Gaming news, eSports, Trailers e Streamers." />
-  <meta property="twitter:image" content="{{ url_for('static', filename='favicon_2.png') }}">
+  <meta name="description" content="Todas as últimas notícias sobre jogos, e-sports, guias de estratégia e trailers." />
+  <meta property="og:description" content="Todas as últimas notícias sobre jogos, e-sports, guias de estratégia e trailers.">
+  <meta property="og:image" content="{{ url_for('static', filename='favicon.png') }}">
+  <meta property="twitter:description" content="Todas as últimas notícias sobre jogos, e-sports, guias de estratégia e trailers." />
+  <meta property="twitter:image" content="{{ url_for('static', filename='favicon.png') }}">
   <link rel="stylesheet" href="{{ url_for('static', filename='css/index.css') }}">
 </head>
 
