Muda estrutura da index

--- a/app/static/css/index.css
+++ b/app/static/css/index.css
@@ -4,6 +4,11 @@
   margin: 20px auto;
 }
 
+.home .page {
+  display: flex;
+  flex-direction: column;
+}
+
 .home .page .header-art {
   user-select: none;
   position: relative;
@@ -12,31 +17,29 @@
   padding-bottom: 20px;
   margin-bottom: 20px;
   animation: loadsItems 0.7s linear;
+  text-decoration: none;
 }
 
-.home .page .header-art:hover>.header-title a {
+.home .page .header-art:hover>.header-title {
   text-decoration: underline;
 }
 
 .home .page .header-art:hover>.header-pic img {
-  transform: scale(1);
   opacity: 0.7;
 }
 
 .category {
-  margin-bottom: 10px;
-}
-
-.category a {
   color: #ffa31a;
   text-transform: uppercase;
   letter-spacing: 0.03rem;
   font-size: 12px;
   font-weight: 700;
   text-decoration: none;
+  margin-bottom: 10px;
+  text-decoration: none;
 }
 
-.home .page .header-art .header-title a {
+.home .page .header-art .header-title {
   font-size: 28px;
   font-weight: 800;
   color: #000000;
@@ -44,7 +47,7 @@
   text-decoration: none;
 }
 
-.home .page .header-art .header-title a:hover {
+.home .page .header-art .header-title:hover {
   opacity: 0.8;
 }
 
@@ -55,19 +58,22 @@
   justify-content: center;
   width: 100%;
   height: 20vw;
+  min-height: 400px;
   overflow: hidden;
 }
 
 .home .page .header-art .header-pic img {
   width: 100%;
-  transform: scale(1.2);
+  transform: scale(1.05);
   background: #FFFFFF;
+  transition: opacity 0.1s linear;
 }
 
 .home .page .header-art .header-subtitle {
   display: block;
   font-weight: 500;
   margin-bottom: 10px;
+  color: #1A1A1A;
 }
 
 .home .page .header-art .header-subtitle a {
@@ -99,13 +105,14 @@
   display: flex;
   height: max-content;
   animation: loadsItems 0.9s linear;
+  text-decoration: none;
 }
 
 .home .page .rest-art:hover>.rest-pic img {
-  display: none;
+  opacity: 0.7;
 }
 
-.home .page .rest-art:hover>.infos .rest-title a {
+.home .page .rest-art:hover>.infos .rest-title {
   text-decoration: underline;
 }
 
@@ -115,6 +122,7 @@
   justify-content: center;
   width: 16vw;
   height: 9vw;
+  min-width: 16vw;
   max-width: 16vw;
   max-height: 9vw;
   margin-right: 10px;
@@ -123,10 +131,11 @@
 
 .home .page .rest-art .rest-pic img {
   width: 100%;
-  transform: scale(1.3);
+  transform: scale(1.1);
+  transition: opacity 0.2s linear;
 }
 
-.home .page .rest-art .infos .rest-title a {
+.home .page .rest-art .infos .rest-title {
   display: block;
   font-weight: 800;
   color: #000000;
@@ -135,7 +144,11 @@
   font-size: 23px;
 }
 
-.home .page .rest-art .infos .rest-subtitle a {
+.home .page .rest-art .infos .rest-title:hover {
+  opacity: 0.7;
+}
+
+.home .page .rest-art .infos .rest-subtitle {
   display: block;
   color: #000000;
   text-decoration: none;
@@ -182,11 +195,12 @@
     padding-bottom: 20px;
     margin-bottom: 20px;
   }
-  .home .page .header-art .header-title a {
+  .home .page .header-art .header-title {
     font-size: 23px;
   }
   .home .page .header-art .header-pic {
     height: 50vw;
+    min-height: 0;
   }
   .home .page .rest-art {
     padding-bottom: 20px;
@@ -203,13 +217,13 @@
     top: 10px;
     right: 0;
   }
-  .home .page .rest-art .infos .rest-title a {
+  .home .page .rest-art .infos .rest-title {
     font-size: 18px;
     position: inherit;
     max-width: 50%;
     min-height: 85px;
   }
-  .home .page .rest-art .infos .rest-subtitle a {
+  .home .page .rest-art .infos .rest-subtitle {
     font-size: 14px;
   }
 }
