--- a/app/templates/posts/new_post.html
+++ b/app/templates/posts/new_post.html
@@ -74,7 +74,7 @@
                     <option value="yes">Sim</option>
                   </select>
                   <input type="text" id="header" class="source-name" placeholder="Nome da fonte usada como referência">
-                  <input type="url" id="header" class="source-url" placeholder="Url do site fonte">
+                  <input type="url" id="header" class="source-url" placeholder="Cole a url do site usado como fonte">
                 </div>
                 <button type="submit" class="submit"><i class="fas fa-paper-plane"></i> Enviar notícia</button>
                 <span class="error"></span>
