Adiciona loader global

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -53,9 +53,7 @@
         </div>
       </div>
       <div class="loads" style="position: relative;">
-        <i class="fas fa-spinner"></i>
-        Carregando
-      </div>
+        {% include 'components/loader.html' %}
     </div>
     {% include 'components/footer.html' %}
   </div>
