--- a/app/static/css/keyframes.css
+++ b/app/static/css/keyframes.css
@@ -41,3 +41,12 @@
     transform: rotate(360deg);
   }
 }
+
+@keyframes GlobalLoader {
+  from {
+    transform: rotate(0deg);
+  }
+  to {
+    transform: rotate(360deg);
+  }
+}
