--- a/app/templates/components/head.html
+++ b/app/templates/components/head.html
@@ -17,6 +17,7 @@
 <link rel="stylesheet" href="{{ url_for('static', filename='css/global.css') }}">
 <link rel="stylesheet" href="{{ url_for('static', filename='css/header.css') }}">
 <link rel="stylesheet" href="{{ url_for('static', filename='css/footer.css') }}">
+<link rel="stylesheet" href="{{ url_for('static', filename='css/loader.css') }}">
 <link rel="stylesheet" href="{{ url_for('static', filename='css/pagination.css') }}">
 <link rel="stylesheet" href="{{ url_for('static', filename='css/sub-header.css') }}">
 <script src="https://kit.fontawesome.com/ed0f511ec4.js" crossorigin="anonymous"></script>
