--- a/app/templates/posts/new_post.html
+++ b/app/templates/posts/new_post.html
@@ -37,8 +37,8 @@
                       <li id="add-paragraph"><i class="fas fa-paragraph"></i>
                         <p>&nbsp;&nbsp;&nbsp;Adicionar um paragrafo</p>
                       </li>
-                      <!--<li id="add-list"><i class="fas fa-list"></i>&nbsp;&nbsp;&nbsp;Adicionar uma lista</li>
-                      <li id="add-comment"><i class="fas fa-comment"></i>&nbsp;&nbsp;&nbsp;Adicionar um comentário</li>-->
+                      <li id="add-cite"><i class="far fa-comment-dots"></i>&nbsp;&nbsp;&nbsp;Adicionar uma citação</li>
+                      <!--<li id="add-comment"><i class="fas fa-comment"></i>&nbsp;&nbsp;&nbsp;Adicionar um comentário</li>-->
                       <li id="add-image"><i class="far fa-image"></i>
                         <p>&nbsp;&nbsp;&nbsp;Adicionar uma imagem</p>
                       </li>
