Adiciona cite mobile

--- a/app/templates/posts/new_post.html
+++ b/app/templates/posts/new_post.html
@@ -37,7 +37,10 @@
                       <li id="add-paragraph"><i class="fas fa-paragraph"></i>
                         <p>&nbsp;&nbsp;&nbsp;Adicionar um paragrafo</p>
                       </li>
-                      <li id="add-cite"><i class="far fa-comment-dots"></i>&nbsp;&nbsp;&nbsp;Adicionar uma citação</li>
+                      <li id="add-cite"><i class="far fa-comment-dots"></i>
+                        <p>&nbsp;&nbsp;&nbsp;Adicionar uma citação
+                        </p>
+                      </li>
                       <!--<li id="add-comment"><i class="fas fa-comment"></i>&nbsp;&nbsp;&nbsp;Adicionar um comentário</li>-->
                       <li id="add-image"><i class="far fa-image"></i>
                         <p>&nbsp;&nbsp;&nbsp;Adicionar uma imagem</p>
