--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -50,14 +50,21 @@
             </div>
           </a>
           {% endfor %}
+          <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+          <!-- H-1 -->
+          <ins class="adsbygoogle" style="display:block" data-ad-client="ca-pub-1284323428666859"
+            data-ad-slot="8676887631" data-ad-format="auto" data-full-width-responsive="true"></ins>
+          <script>
+            (adsbygoogle = window.adsbygoogle || []).push({});
+          </script>
         </div>
       </div>
       <div class="loads" style="position: relative;">
         {% include 'components/loader.html' %}
+      </div>
+      {% include 'components/footer.html' %}
     </div>
-    {% include 'components/footer.html' %}
-  </div>
-  <script src="{{ url_for('static', filename='javascript/index.js') }}"></script>
+    <script src="{{ url_for('static', filename='javascript/index.js') }}"></script>
 </body>
 
 </html>
