--- a/app/templates/pages/categories.html
+++ b/app/templates/pages/categories.html
@@ -46,6 +46,13 @@
             </div>
           </a>
           {% endfor %}
+          <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+          <!-- H-1 -->
+          <ins class="adsbygoogle" style="display:block" data-ad-client="ca-pub-1284323428666859"
+            data-ad-slot="8676887631" data-ad-format="auto" data-full-width-responsive="true"></ins>
+          <script>
+            (adsbygoogle = window.adsbygoogle || []).push({});
+          </script>
         </div>
       </div>
       <div class="loads" style="position: relative;">
