--- a/app/templates/notices/notice.html
+++ b/app/templates/notices/notice.html
@@ -90,6 +90,15 @@
       </div>
       {% if more_news != None %}
       <div class="more-notices">
+        <div class="googleAds">
+          <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+            <!-- H-1 -->
+            <ins class="adsbygoogle" style="display:block" data-ad-client="ca-pub-1284323428666859"
+              data-ad-slot="8676887631" data-ad-format="auto" data-full-width-responsive="true"></ins>
+            <script>
+              (adsbygoogle = window.adsbygoogle || []).push({});
+            </script>
+        </div>
         <span class="more-notices-title">Mais notícias</span>
         <div class="notices-in-more">
           {% for news in more_news %}
