--- a/app/templates/notices/notice.html
+++ b/app/templates/notices/notice.html
@@ -90,7 +90,7 @@
       </div>
       {% if more_news != None %}
       <div class="more-notices">
-        <div class="googleAds">
+        <div class="googleAdsFooter">
           <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
             <!-- H-1 -->
             <ins class="adsbygoogle" style="display:block" data-ad-client="ca-pub-1284323428666859"
